--- a/index.html
+++ b/index.html
@@ -241,17 +241,29 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Introduction to SQL by DataCamp – 2020</li>
+            Advanced Java Programming by Linkedin</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Responsive Web Design by freeCodeCamp</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Git: Become an Expert in Git & GitHub by udemy</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Spring Framework for Beginners with Spring Boot by udemy</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Introduction to SQL by DataCamp</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Joining Data in SQL by DataCamp – 2020</li>
+              Joining Data in SQL by DataCamp</li>
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Android Mobile Application Development and soft skills by LICT- 2017</li>
+            Android Mobile Application Development and soft skills by LICT</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Android Mobile Application Training by EATL - 2015</li>
+            Android Mobile Application Training by EATL</li>
           <!-- <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
