--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
             <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
+            <i class="fab fa-js"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab fa-aws"></i>
           </li>
           <li class="list-inline-item">
