--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="subheading mb-5">240/J,Zakir Road, East Rampura · Dhaka, 1219 . Bangladesh · (+880) 168-944-3975 ·
           <a href="mailto:ihchowdhury32@gmail.com">ihchowdhury32@gmail.com</a>
         </div>
-        <p class="lead mb-5">Sr. Software Engineer @ Nexdecade Technology PVT Ltd. | Web & Mobile Application Developer | Full Stack Java Developer | Spring Boot | Web Scrapper</p>
+        <p class="lead mb-5">Sr. Software Engineer @ BJIT Ltd. | Full Stack Java Developer | Web & Mobile Application Developer | Spring Boot | Web Scrapper</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/ibrahimchowdhury/">
             <i class="fab fa-linkedin-in"></i>
