--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#proj_gal">Project Galary</a>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="blogs">My Blogs</a>
+        </li>
       </ul>
     </div>
   </nav>
