--- a/blogs/index.html
+++ b/blogs/index.html
@@ -95,7 +95,7 @@
                     <div class="u-container-layout u-valign-middle u-container-layout-2">
                       <h2 class="u-text u-text-1">FreeMarker + Spring Boot</h2>
                       <p class="u-text u-text-2"> FreeMarker is a template engine. It is an open source Java library......</p>
-                      <a href="https://sites.google.com/view/springboot-freemarker/freemarker" target=”_blank” class="u-border-none u-btn u-btn-rectangle u-button-style u-grey-15 u-btn-1">learn more</a>
+                      <a href="https://sites.google.com/view/springboot-freemarker/freemarker" target="_blank" class="u-border-none u-btn u-btn-rectangle u-button-style u-grey-15 u-btn-1">learn more</a>
                     </div>
                   </div>
                 </div>
@@ -106,7 +106,7 @@
                     <div class="u-container-layout u-valign-middle u-container-layout-3">
                       <h2 class="u-text u-text-3">Faker.js-Create Dummy API</h2>
                       <p class="u-text u-text-4">Faker.js is a library to generate massive amounts of fake data in the browser and node.js.......</p>
-                      <a href="https://gist.github.com/IhChowdhury/18ef8d698adf9a6be13d1a362bc0217f" target=”_blank” class="u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-grey-15 u-text-body-color u-btn-2">learn more</a>
+                      <a href="https://gist.github.com/IhChowdhury/18ef8d698adf9a6be13d1a362bc0217f" target="_blank" class="u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-grey-15 u-text-body-color u-btn-2">learn more</a>
                     </div>
                   </div>
                   <div class="u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-2" src="" data-image-width="614" data-image-height="217">
